# fish-autoclicker

./: README.md  config.toml  main.py  pyproject.toml
asset/: d1  d2  d3  d4  n1  n2  n3
