[project]
name = "fish-autoclicker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "dxcam>=0.0.5",
    "keyboard>=0.13.5",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "psutil>=7.1.3",
    "pydirectinput>=1.0.4",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "wmi>=1.5.1",
]
